Removing compiler warnings